--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             "styles": [
               "src/styles.sass",
               "node_modules/materialize-css/dist/css/materialize.min.css",
-              "node_modules/@mdi/font/css/materialdesignicons.min.css"
+              "node_modules/@mdi/font/css/materialdesignicons.min.css",
+              "src/assets/index.sass"
             ],
             "scripts": [
                "node_modules/jquery/dist/jquery.min.js",
