--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
+    "@angular/http": "^7.2.4",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
@@ -23,6 +24,7 @@
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "materialize-css": "^1.0.0-rc.2",
+    "ngx-materialize": "^6.1.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
