--- a/angular.json
+++ b/angular.json
@@ -30,11 +30,16 @@
               "src/styles.sass",
               "node_modules/materialize-css/dist/css/materialize.min.css",
               "node_modules/@mdi/font/css/materialdesignicons.min.css",
+              "./node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
+              "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css",
               "src/assets/index.sass"
+              
             ],
             "scripts": [
                "node_modules/jquery/dist/jquery.min.js",
-               "node_modules/materialize-css/dist/js/materialize.min.js"
+               "node_modules/materialize-css/dist/js/materialize.min.js",
+               "./node_modules/jquery/dist/jquery.min.js",
+                "./node_modules/owl.carousel/dist/owl.carousel.min.js"
             ]
           },
           "configurations": {
